# ticket-analysis

./: .gitignore  README.md  create_sample_csvs.py  docker-compose.yml  jupyter-lite.json
.github/workflows/: deploy.yml
data/: 2022-12-01_to_2022-12-31.json
data/Tickets_Export/: Tickets_1.csv
data/fresh_service_tickets/: Tickets_2.csv
freshservice_scraper/: README.md  get_tickets.py  requirements.txt  run_tests.py  setup.py
freshservice_scraper/lib/: __init__.py  api.py  cli.py  data_handler.py  logger.py
freshservice_scraper/tests/: __init__.py  test_api.py  test_cli.py  test_data_handler.py
jupyter-lite/: .jupyterlite.doit.db  README.md  index.html  jupyter_lite_config.json  pyproject.toml  requirements.txt  setup.py  test_local_build.sh
jupyter-lite/content/: access_files_example.ipynb  ticket_analysis.ipynb
jupyter-lite/content/data/fresh_service_tickets/: Tickets_1.csv  Tickets_2.csv  Tickets_3.csv
jupyter-lite/ticket_analytics_jupyterlite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
splunk-config/: dashboard.xml  indexes.conf  inputs.conf  props.conf
splunk-config/default/data/ui/views/: dashboard.xml
